--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.6.8",
     "@nextui-org/react": "^2.4.2",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -38,6 +40,7 @@
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
     "zod": "^3.23.8",
     "zod-formik-adapter": "^1.3.0"
   },
