--- a/.dockerignore
+++ b/.dockerignore
@@ -1,34 +1,3 @@
-# Ignore files and directories commonly used in web development
-
-# Ignore node_modules directory
 node_modules
-
-# Ignore build artifacts
-.next
-!.next/static
-!.next/standalone
-
-# Ignore log files
-*.log
-
-# Ignore temporary files
-*.tmp
-*.temp
-
-# Ignore .env files (contains sensitive information)
-# .env
-
-# Ignore editor-specific files and directories
-.vscode
-.idea
-*.sublime-project
-*.sublime-workspace
-
-# Ignore version control files and directories
-.git
-.svn
-
-# Ignore Docker files
-Dockerfile
-
 npm-debug.log
+.env
