--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.6.8",
+    "@next/third-parties": "^14.2.15",
     "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.1",
     "contentful": "^10.13.2",
     "cookies-next": "^4.2.1",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.12",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
@@ -29,7 +31,7 @@
     "lucide-react": "^0.438.0",
     "mongoose": "^8.5.2",
     "nanoid": "^5.0.7",
-    "next": "^14.2.5",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
