updated about us page

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-nice-avatar": "^1.5.0",
     "react-share": "^5.1.0",
+    "safe-json-stringify": "^1.2.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,6 +54,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/safe-json-stringify": "^1.1.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
