--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
     "geist": "^1.3.1",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
     "mongoose": "^8.5.2",
