--- a/package.json
+++ b/package.json
@@ -10,23 +10,52 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.6.8",
+    "@hookform/resolvers": "^3.9.1",
     "@next/third-parties": "^14.2.15",
     "@nextui-org/react": "^2.4.2",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "contentful": "^10.13.2",
     "cookies-next": "^4.2.1",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "embla-carousel-react": "^8.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
     "geist": "^1.3.1",
+    "input-otp": "^1.4.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
@@ -36,16 +65,22 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-nice-avatar": "^1.5.0",
+    "react-resizable-panels": "^2.1.7",
     "react-share": "^5.1.0",
+    "recharts": "^2.15.0",
     "safe-json-stringify": "^1.2.0",
+    "sonner": "^1.7.1",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
