--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "contentful": "^10.13.2",
+    "contentful-rt-utils": "^1.0.0",
     "cookies-next": "^4.2.1",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
