--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^10.1.0",
     "react-nice-avatar": "^1.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-share": "^5.1.0",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.1",
     "safe-json-stringify": "^1.2.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.9",
